{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 53,
  "lineage": "7cf077d1-0aa4-d126-9942-0eae9c68780c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839353020711:internet-gateway/igw-067c7657a3cca8968",
            "id": "igw-067c7657a3cca8968",
            "owner_id": "839353020711",
            "tags": {
              "Name": "ecs-igtw"
            },
            "tags_all": {
              "Name": "ecs-igtw"
            },
            "vpc_id": "vpc-06b82e7b755df9d07"
          },
          "dependencies": [
            "aws_vpc.ecs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:839353020711:vpc/vpc-06b82e7b755df9d07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "145.0.0.0/16",
            "default_network_acl_id": "acl-0e13897adf4e8395e",
            "default_route_table_id": "rtb-0ec72b5e13ce3539b",
            "default_security_group_id": "sg-0ad9bed4750d55745",
            "dhcp_options_id": "dopt-042f3a58b2dcd6511",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b82e7b755df9d07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec72b5e13ce3539b",
            "owner_id": "839353020711",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}